--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p ${PORT:-6000}",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
+    "dev": "next dev -p ${PORT:-56567}",
+    "genkit:dev": "genkit start --ts src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
